syntax="proto3";

package user;

option go_package = "/user";

message User {
  int32 id = 1;
  string name = 2;
  string phone = 3;
  string avatar = 4;
}

message SendCodeRequest {
  string phone = 1;
}

message SendCodeResponse {
  string biz = 1;
}

message VerifyCodeRequest {
  string phone = 1;
  string code = 2;
  string biz = 3;
}

message VerifyCodeResponse {
  string token = 1;
}

message GetUserInfoRequest {
  int32 user_id = 1;
}

message GetUserInfoResponse {
  User user = 1;
}

service UserService {
  rpc SendCode(SendCodeRequest) returns (SendCodeResponse);
  rpc VerifyCode(VerifyCodeRequest) returns (VerifyCodeResponse);
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
}